(Fix) Backend degradation 5 (Backend)
Experimental, needs extensive production testing